--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/haramaya-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>HUEC - Haramaya University Ethics Club</title>
+    <meta name="description" content="Haramaya University Ethics and Anti-Corruption Club - Building a culture of integrity, transparency, and accountability" />
+    <meta name="author" content="Haramaya University Ethics Club" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="HUEC - Haramaya University Ethics Club" />
+    <meta property="og:description" content="Building a culture of integrity, transparency, and accountability within our university community" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/haramaya-logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@HaramayaUniversity" />
+    <meta name="twitter:image" content="/haramaya-logo.jpg" />
   </head>
 
   <body>
